--- a/p1_project-files/pom.xml
+++ b/p1_project-files/pom.xml
@@ -27,6 +27,13 @@
             <version>4.6.5</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-junit-jupiter</artifactId>
+            <version>4.8.0</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
 </project>
