--- a/p1_project-files/bin/pom.xml
+++ b/p1_project-files/bin/pom.xml
@@ -27,6 +27,20 @@
             <version>4.6.5</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-junit-jupiter</artifactId>
+            <version>4.8.0</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.19.0</version>
+        </dependency>
+
+
     </dependencies>
 
 </project>
